fix: codemirror border is too bright in dark mode (fixes #81)

--- a/packages/yasqe/src/scss/codemirrorMods.scss
+++ b/packages/yasqe/src/scss/codemirrorMods.scss
@@ -2,7 +2,7 @@
   .CodeMirror {
     line-height: 1.5em;
     font-size: 14px;
-    border: 1px solid #d1d1d1;
+    border: 1px solid var(--yasgui-border-color);
   }
 
   span.cm-error {
